@@ -20,14 +20,9 @@ spec:
       effect: "NoSchedule"
   containers:
     - name: maven
-      image: maven:3.6.0-jdk-8
+      image: maven:3.6.0-jdk-11
       command: ["cat"]
       tty: true
-      env:
-        - name: JAVA_TOOL_OPTIONS
-          value: |
-            -XX:+UnlockExperimentalVMOptions
-            -XX:+UseCGroupMemoryLimitForHeap
       resources:
         limits:
           cpu: 1
